// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatefulTooltip basic render: renders <StatefulContainer/> 1`] = `
<StatefulContainer
  accessibilityType="tooltip"
  content={[MockFunction]}
  initialState={
    Object {
      "isOpen": true,
    }
  }
  onClose={[MockFunction]}
  onMouseEnterDelay={100}
  onMouseLeaveDelay={200}
  onOpen={[MockFunction]}
  overrides={
    Object {
      "Body": [Function],
    }
  }
  placement="topLeft"
  showArrow={true}
  stateReducer={[MockFunction]}
  triggerType="hover"
/>
`;

exports[`StatefulTooltip basic render: renders <Tooltip/> 1`] = `
<Tooltip
  accessibilityType="tooltip"
  content={[Function]}
  ignoreBoundary={false}
  isOpen={true}
  onBlur={[Function]}
  onClickOutside={[Function]}
  onEsc={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseEnterDelay={100}
  onMouseLeave={[Function]}
  onMouseLeaveDelay={200}
  overrides={
    Object {
      "Body": [Function],
    }
  }
  placement="topLeft"
  showArrow={true}
  triggerType="hover"
>
  <span>
    Hover me
  </span>
</Tooltip>
`;
